@@ -34,6 +34,7 @@
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
 * [mms] SECURITY: Fix XSS in message and search screens resulting from a user-defined flag label (João Machado &lt;geral@jpaulo.eu&gt;).
+* [mms] Send linked attachment download notification message in language of the sending user (Bug #12783).
 * [mms] Fix populating search fields when editing an advanced search query.
 * [mms] Trigger auto save draft in dynamic view if attachments have changed.
 * [mms] Improved UI for dropping attachments on dynamic compose screen.
@@ -3297,6 +3298,7 @@
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
 * [mms] SECURITY: Fix XSS in message and search screens resulting from a user-defined flag label (João Machado &lt;geral@jpaulo.eu&gt;).
+* [mms] Send linked attachment download notification message in language of the sending user (Bug #12783).
 * [mms] Fix populating search fields when editing an advanced search query.
 * [mms] Trigger auto save draft in dynamic view if attachments have changed.
 * [mms] Improved UI for dropping attachments on dynamic compose screen.
