@@ -4,6 +4,8 @@ v6.1.5-git
 
 [mms] SECURITY: Fix XSS in message and search screens resulting from a
       user-defined flag label (João Machado <geral@jpaulo.eu>).
+[mms] Send linked attachment download notification message in language of the
+      sending user (Bug #12783).
 [mms] Fix populating search fields when editing an advanced search query.
 [mms] Trigger auto save draft in dynamic view if attachments have changed.
 [mms] Improved UI for dropping attachments on dynamic compose screen.
